Display the first question.. kind of

--- a/public/styles.css
+++ b/public/styles.css
@@ -6,3 +6,13 @@
     text-align: center;
     font-size: 5em;
 }
+
+/*
+.gameplay-choice {
+    TODO: button styling
+}
+*/
+
+#game-question {
+    text-align: center;
+}
