--- a/public/styles.css
+++ b/public/styles.css
@@ -1,3 +1,10 @@
+/*
+    John Kusner
+    jjk320@lehigh.edu
+    CSE 264
+    Final Project
+*/
+
 .ui-content .ui-listview {
     margin-bottom: 1em;
 }
